# reach

./: .gitignore  Cargo.toml  README.md  ideation.txt  requirements.txt  tatus  temp.txt
.github/workflows/: rust.yml
apis/: Cargo.toml
apis/src/: gemini.rs  lib.rs
apis/src/config/: mod.rs
reachapi/: Cargo.toml
reachapi/src/: errors.rs  lib.rs
reachapi/src/apis/: arxiv.rs  gemini.rs  mod.rs
reachapi/src/config/: api_config.rs  arxiv_config.rs  mod.rs
reachdb/: Cargo.toml
reachdb/src/: data_base.rs  error.rs  errors.rs  lib.rs  main.rs  utils.rs
reachdb/src/algorithms/: mod.rs  random_walk.rs
reachdb/src/records/: mod.rs  node.rs  relationship.rs
reachtui/: Cargo.toml
reachtui/src/: api_display.rs  lib.rs
rsearch/: Cargo.toml
rsearch/src/: knowledge_graph.rs  utils.rs
src/: apis.rs  config.rs  display.rs  errors.rs  lib.rs  main.rs  rsearch.rs
src/apis/: arxiv.rs  gemini.rs  google.rs  mod.rs
src/config/: api_config.rs  arxiv_config.rs
src/display/: mod.rs
src/metadata/: Cargo.toml  README.md
src/metadata/src/: lib.rs
src/rchat/: Cargo.toml  README.md  diesel.toml
src/rchat/migrations/2025-03-24-110714_rchat/: up.sql
src/rchat/migrations/2025-04-05-193623_rchat/: down.sql  up.sql
src/rchat/src/: chat.rs  diesel_api.rs  error.rs  ideas.txt  lib.rs  main.rs  models.rs  schema.rs
src/rchat/src/chat/: chat.rs  contexts.rs  mod.rs
src/rchat/src/chat/context/: chat_ctx.rs  mod.rs
src/reachapi/: Cargo.toml  README.md
src/reachapi/src/: lib.rs
src/reachapi/src/apis/: arxiv.rs  gemini.rs  google.rs  mod.rs
src/reachapi/src/config/: arxiv_config.rs  mod.rs
src/reachapi/src/models/: gemini.rs  gemini_response.rs  mod.rs
src/reachdb/: README.md
src/reachdb/src/: data_base.rs  lib.rs  main.rs
src/reachdb/src/algorithms/: mod.rs
src/reachdb/src/records/: relationship.rs
src/reachtui/: Cargo.toml  README.md
src/reachtui/src/: api_display.rs  errors.rs  lib.rs  tui.rs
src/rsearch/: Cargo.toml  README.md  knowledge_graph.rs  mod.rs  utils.rs
src/rsearch/src/: errors.rs  knowledge_graph.rs  lib.rs  utils.rs
src/scripts/: crawl.py  setup.py
tui/: Cargo.toml
tui/src/display/: api_display.rs
