[package]
name = "reach-cli"
version = "0.1.1"
edition = "2021"

[features]
requires_config = []

[[bin]]
name = "reach"
path = "src/main.rs"

[workspace]
members = [
    "reachdb",
]

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
roxmltree = "0.19.0"
colored = "3.0.0"
termimad = "0.31.2"
scraper = "0.22.0"
regex = "1.11.1"
reachdb = { path = "reachdb" }