[package]
name = "rchat"
version = "0.1.0"
edition = "2024"

[dependencies]
reachapi = { path = "../reachapi" } # For LLM API
# reachdb = { path = "../reachdb" }   # For Knowledge Graph

serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "serde_json"] }
dotenvy = "0.15" 
tokio = { version = "1", features = ["full"] }
log = "0.4.26"
flexi_logger = "0.30.1"