[package]
name = "reachapi"
version = "0.1.0"
edition = "2024"

[features]
requires_config = []
# debug = ["tokio"]

[dependencies]
roxmltree = "0.19.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4.5.28", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
async-stream = "0.3.6"

# futures-util = "0.3"
# tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["io-util"] }  