[package]
name = "rsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
reachapi = { path = "../reachapi" }
reachdb = { path = "../reachdb" }
clap = { version = "4.5.28", features = ["derive"] }
regex = "1.11.1"
serde_json = "1.0"
log = "0.4.26"
env_logger = "0.11.6"
tokio = { version = "1", features = ["full"] }